Fix print statements

--- a/python-programming.ipynb
+++ b/python-programming.ipynb
@@ -181,7 +181,7 @@
     "```\n",
     "## Access variables by name\n",
     "```\n",
-    "print x # 3\n",
+    "print(x) # 3\n",
     "```\n",
     "## Variables work like sticky notes, they’re just a label\n"
    ]
@@ -313,13 +313,13 @@
     "```\n",
     "# Test c1 for True or False\n",
     "if c1:\n",
-    "    print \"c1 was True\"\n",
+    "    print(\"c1 was True\")\n",
     "# c1 was False, check c2\n",
     "elif c2:\n",
-    "    print \"c1 False but c2 True\"\n",
+    "    print(\"c1 False but c2 True\")\n",
     "# All checks False\n",
     "else:\n",
-    "    print \"Both False\"\n",
+    "    print(\"Both False\")\n",
     "```"
    ]
   },
@@ -429,7 +429,7 @@
     "- Loop over lines, and `strip()` each one\n",
     "```\n",
     "for line in f:\n",
-    "    print line.strip()\n",
+    "    print(line.strip())\n",
     "```\n",
     "- Close with `f.close()`"
    ]
@@ -449,8 +449,8 @@
     "\n",
     "```\n",
     "import sys\n",
-    "print sys.argv[0]\n",
-    "print sys.argv[1]\n",
+    "print(sys.argv[0])\n",
+    "print(sys.argv[1])\n",
     "```\n",
     "\n",
     "```\n",
@@ -461,6 +461,14 @@
     "\n",
     "- Check the length of sys.argv to be helpful!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cde6946b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
